<resources>
    <string name="app_name">MarvinControlPanel</string>
    <string name="bt_power_err">Error!</string>
    <string name="bt_power_turning_off">turning off &#8230;</string>
    <string name="bt_power_turning_on">turning on &#8230;</string>
    <string name="bt_power_off">off</string>
    <string name="bt_power_on">on</string>
    <string name="bt_power_undefined">undefined</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_bt_mac">Bluetooth MAC address (RPi)</string>
    <string name="pref_bt_mac_description">MAC address of the bluetooth module of the Raspberry Pi.</string>
    <string name="menu_connect">Connect</string>
    <string name="connection_connected">connected</string>
    <string name="connection_connecting">connecting ...</string>
    <string name="connection_disconnected">disconnected</string>
    <string name="connection_rpi_not_paired">raspberry (%1$s) pi not paired</string>
    <string name="connection_failed">failed!</string>
    <string name="connect_to_hint">Connect to Marvin to choose an animal.</string>
    <string name="connection_state_label">Connection State:</string>
    <string name="bluetooth_state_label">Bluetooth State:</string>
    <string name="settings_title_main">Main Settings</string>
    <string name="settings_title_frog">Frog Settings</string>
    <string name="settings_title_leopard">Leopard Settings</string>
    <string name="settings_title_rhino">Rhino Settings</string>
    <string name="settings_title_turtle">Turtle Settings</string>
    <string name="settings_title_tomato">Tomato Settings</string>
    <string name="cont_type_rectangle">Rectale</string>
    <string name="cont_type_circle">Circle</string>
    <string name="hue_upper">Hue (Upper)</string>
    <string name="hue_lower">Hue (Lower)</string>
    <string name="sat_upper">Saturation (Upper)</string>
    <string name="sat_lower">Saturation (Lower)</string>
    <string name="val_upper">Value (Upper)</string>
    <string name="val_lower">Value (Lower)</string>
    <string name="cont_size_tolerance">Contour Size Tolerance</string>
    <string name="min_cont_size">Contour Size (min.)</string>
    <string name="tolerance_to_middle">Tolerance to Middle</string>


    // Preference keys
    <string name="raspberry_pi_bt_mac">raspberry_pi_bt_mac</string>

    // Constant strings
    <string name="rpi_bt_mac">B8:27:EB:27:39:A1</string>
    <string name="uuid">94f39d29-7d6d-437d-973b-fba39e49d4ee</string>
    <string name="hsv_zero">0</string>
    <string name="hsv_hue_max">179</string>
    <string name="hsv_max">255</string>
    <string name="tolerance_to_middle_default">10</string>
    <string name="cont_size_tolerance_default">1.8</string>
    <string name="cont_default">r</string>
    <string-array name="cont_entries">
        <item>@string/cont_type_rectangle</item>
        <item>@string/cont_type_circle</item>
    </string-array>
    <string-array name="cont_values">
        <item>r</item>
        <item>c</item>
    </string-array>
</resources>
