<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/connect_to_hint"
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/bluetooth_power_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/connection_state_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/connection_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_power_state" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/bluetooth_state_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btnContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButtonTomato"
            android:layout_width="87dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:onClick="animalSelected"
            android:tag="tomato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toEndOf="@+id/imageButtonTurtle"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonLeopard"
            app:srcCompat="@drawable/ic_tomato" />

        <ImageButton
            android:id="@+id/imageButtonTurtle"
            android:layout_width="87dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:onClick="animalSelected"
            android:tag="turtle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonFrog"
            app:srcCompat="@drawable/ic_turtle" />

        <ImageButton
            android:id="@+id/imageButtonFrog"
            android:layout_width="87dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="104dp"
            android:onClick="animalSelected"
            android:tag="frog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_frog" />

        <ImageButton
            android:id="@+id/imageButtonRhino"
            android:layout_width="88dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="104dp"
            android:onClick="animalSelected"
            android:tag="rhino"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_rhino" />

        <ImageButton
            android:id="@+id/imageButtonLeopard"
            android:layout_width="87dp"
            android:layout_height="80dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="104dp"
            android:onClick="animalSelected"
            android:tag="leopard"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonRhino"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toEndOf="@+id/imageButtonFrog"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_leopard" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/log_window"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContainer">

        <ListView
            android:id="@+id/log_msg_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:divider="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>